txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -101,7 +101,7 @@
 	\newtcbtheorem[number within=section]{nition}{Definition}{
 		enhanced, 
 	 breakable, sharp corners,
-		colframe=white, coltitle=white, 
+		colframe=SpringGreen4!70!black, coltitle=white, 
 		fonttitle=\bfseries,
 		colbacktitle=SpringGreen4,
 		colback=DarkSeaGreen3!70!LemonChiffon3,
