txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -406,7 +406,6 @@
 		enhanced,
 		colback=red!5!white,sharp corners, colframe=white,
 		breakable,
-		drop shadow,
 		coltitle=black,
 		fonttitle=\bfseries\itshape,
 		interior style={gray!20},
@@ -431,7 +430,7 @@
 									\renewcommand{\labelitemiii}{$\textcolor{SkyBlue4}{\diamond}$}
 									\renewcommand{\labelitemiv}{$\textcolor{SkyBlue4}{\ast}$}
 									
-									\newcommand{\enf}[1]{\textcolor{DodgerBlue3}{\textbf{#1}}} %enf sta per enfasi
+									\newcommand{\enf}[1]{\textcolor{Green4}{\textbf{#1}}} %enf sta per enfasi
 					\let\emph\enf
 									\newcommand{\sott}[1]{\setulcolor{SkyBlue3}\ul{#1}}
 									\let\underline\sott
