txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -74,12 +74,8 @@
 	enhanced, breakable, sharp corners,
 	colframe=white, coltitle=black, colbacktitle=gray!24,
 	colback=white,
-	interior style={top color=LightSteelBlue2, bottom color=white},
-	boxed title style={interior style={left color=LightSteelBlue2,right color=white!35}, sharpish corners,
+	interior style={top color=PaleGreen3, bottom color=white}, sharpish corners,
 		frame style={right color=LightSteelBlue2,left color=white!35},drop fuzzy shadow=gray},
-	attach boxed title to top left,
-	drop fuzzy shadow=gray,
-	boxed title style={boxrule=0.5mm, sharp corners},
 	separator sign={:},
 	description formatter=\newline,
 	theorem hanging indent/.try=0pt,
