txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -70,7 +70,7 @@
 
 
 \theoremstyle{remark}
-\newtcbtheorem[number within=section]{rema}{Remark}{
+\newtcbtheorem{rema}{Remark}{
 	enhanced, breakable, sharp corners,
 	colframe=white, coltitle=black, colbacktitle=gray!24,
 	colback=white,
