txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -72,7 +72,7 @@
 \theoremstyle{remark}
 \newtcbtheorem{rema}{Remark}{
 	enhanced, breakable, sharp corners,
-	colframe=white, coltitle=black, colbacktitle=gray!24,
+	colframe=white, coltitle=black, colbacktitle=OliveDrab1!24,
 	colback=white,
 	interior style={top color=PaleGreen3, bottom color=white}, sharpish corners,
 		frame style={right color=PaleGreen3,left color=white!35},
