txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -75,7 +75,7 @@
 	colframe=white, coltitle=black, colbacktitle=OliveDrab1!24,
 	colback=white,
 	interior style={top color=PaleGreen3, bottom color=white}, sharpish corners,
-		frame style={right color=PaleGreen3,left color=white!35},
+		frame style={top color=PaleGreen3,bottom color=white!35},
 	separator sign={:},
 	description formatter=\newline,
 	theorem hanging indent/.try=0pt,
