txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -71,7 +71,7 @@
 
 \theoremstyle{remark}
 \newtcbtheorem{rema}{Remark}{
-	enhanced, breakable, sharp corners,
+	enhanced, breakable, rounded corners,
 	colframe=white, coltitle=black, colbacktitle=OliveDrab1!24,
 	colback=white,
 	interior style={top color=PaleGreen3, bottom color=white}, sharpish corners,
