--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -74,7 +74,7 @@
 	enhanced, breakable, rounded corners,
 	colframe=white, coltitle=black, colbacktitle=OliveDrab1!24,
 	colback=white,
-	interior style={top color=PaleGreen3, bottom color=white}, sharpish corners,
+	interior style={top color=PaleGreen3, bottom color=white}, rounded corners,
 		frame style={top color=PaleGreen3,bottom color=white!35},
 	separator sign={:},
 	description formatter=\newline,
