txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -77,6 +77,7 @@
 	interior style={top color=PaleGreen3, bottom color=white}, rounded corners,
 		frame style={top color=PaleGreen3,bottom color=white!35},
 	separator sign={:},
+	fonttitle=\itshape,
 	description formatter=\newline,
 	theorem hanging indent/.try=0pt,
 }{}
