txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -28,7 +28,7 @@
 %\usepackage{amsmath,amssymb,bbm}
 \usepackage{graphicx}
 \usepackage[x11names,table]{xcolor}
-\usepackage[colorlinks=true, allcolors=Aquamarine3]{hyperref}
+\usepackage[colorlinks=true, allcolors=DarkSeaGreen4]{hyperref}
 \usepackage{lipsum} 
 \usepackage[shortlabels]{enumitem}   
 \usepackage{array}
