--- a/Tesi pf/content.tex
+++ b/Tesi pf/content.tex
@@ -45,7 +45,7 @@ Nel 1957 ottenne un ingaggio all'Hillcrest Club sul Washington Boulevard a Los A
 Bley iniziò così la sua esperienza con Coleman (che gli sarebbe costata il posto di lavoro all'Hillcrest\footcite[51]{cappelletti}) esplorando diverse concezioni di tempo, struttura (Bley aveva sempre mal sopportato la ridondanza di sezioni A e B nella forma canzone tradizionale) e armonia. Parte di queste performance, che Bley registrava su nastro, sono documentate dai dischi \textbf{\textit{The Fabulous Paul Bley Quintet}} [America Records 1970] e \textbf{\textit{Ornette Classics 1}} [Improvising Artists 1977]. \par
 Dopo un breve ingaggio con Scott LaFaro (basso), Bobby Hutcherson (vibrafono) e Larance Marable (batteria), Carla e Paul tornarono a New York nel 1959 dove la fama di Coleman precedeva il nome di Bley\footcite[70]{stopping}. Nel 1960 venne chiamato da George Russell, che aveva avuto modo di ascoltare Bley qualche tempo addietro alla Lenox School of Jazz, per un progetto di un pezzo per due pianoforti e Orchestra per la Decca Records in quello che sarebbe poi uscito con il titolo di \textit{\textbf{Jazz in the Space Age}} [Decca 1960]. Compositore affermato, Russell aveva concepito una teoria armonica basata sulla \textit{gravità tonale}\footcite[3]{russell} e su un'organizzazione tonale incentrata sul cromatismo interpretato come naturale estensione della serie armonica\footcite[12]{russell}, prospettiva che senza dubbio ben si complementava con la fuga dalla tonalità (benchè Russell di fatto proponesse un \textit{rafforzamento} parossistico del concetto di tonalità) che caratterizzava la musica di Coleman.\\
 L'altro pianista chiamato a realizzare il progetto era Bill Evans, in quegli anni all'apice della sua popolarità dopo le registrazioni di \textit{\textbf{A Kind Of Blue}} [Columbia 1959]. Bley racconta stupito di come questi si era inaspettatamente rivelato in sintonia con le sue idee di sperimentazione e atonalità, tanto da preoccuparsi che Evans potesse rubargli la scena e lasciarlo senza lavoro. Con suo grande sollievo, però, Bley racconta che dopo le registrazioni andò ad ascoltare il trio di Evans al Village Vanguard per scoprire che il pianista, al di là dell'esperienza con Russell, non sembrava interessato ad allontanarsi da quella che era la sua zona di comfort\footcite[75]{stopping}.\par
-In questi anni Bley conobbe il bassista Steve Swallow, con il quale si ritrovò a suonare in diverse occasioni in duo. Contestualmente, fu anche chiamato dal chitarrista Jim Hall per sostituirlo in un trio con il clarinettista e sassofonista Jimmy Giuffre e il bassista Ralph Peña. Giuffre, così come Russell, aveva avuto modo di ascoltare Bley alla Lenox School of Jazz ed era intrigato dallo stile anticonvenzionale del pianista. In seguito all'abbandono di Peña, Bley convinse Giuffre ad assumere Swallow come bassista. Soddisfatto dal suono del trio, Giuffre portò il gruppo per una (sfortunata\footcite[77]{stopping}) tournee in Europa nel 1961. Dello stesso anno sono i due dischi che documentano questa iterazione dei \textit{Jimmy Giuffre 3}, cioè \textit{\textbf{Thesis}} [Verve 1961] e \textit{\textbf{Fusion}} [Verve 1961], in cui già si nota una prevalenza di brani scritti da Carla Bley (tendenza, questa, che non avrebbe mai abbandonato Paul nemmeno dopo la separazione).\\
+In questi anni Bley conobbe il bassista Steve Swallow, con il quale si ritrovò a suonare in diverse occasioni in duo. Contestualmente, fu anche chiamato dal chitarrista Jim Hall per sostituirlo in un trio con il clarinettista e sassofonista Jimmy Giuffre e il bassista Ralph Peña. Giuffre, così come Russell, aveva avuto modo di ascoltare Bley alla Lenox School of Jazz ed era intrigato dallo stile anticonvenzionale del pianista. In seguito all'abbandono di Peña, Bley convinse Giuffre ad assumere (a scatola chiusa) Swallow come bassista. Soddisfatto dal suono del trio, Giuffre portò il gruppo per una (sfortunata\footcite[77]{stopping}) tournee in Europa nel 1961. Dello stesso anno sono i due dischi che documentano questa iterazione dei \textit{Jimmy Giuffre 3}, cioè \textit{\textbf{Thesis}} [Verve 1961] e \textit{\textbf{Fusion}} [Verve 1961], in cui già si nota una prevalenza di brani scritti da Carla Bley (tendenza, questa, che non avrebbe mai abbandonato Paul nemmeno dopo la separazione). Un ulteriore album, \textit{\textbf{Free Fall}} [Columbia 1963] portò a un livello ancora più avanzato la proposta di improvvisazione collettiva di Giuffre. Là dove nei primi due dischi si avvertiva ancora una forma compositiva, in \textit{Free Fall} si assiste a uno sgretolamento di quest'ultima in favore di una libertà espressiva quasi totale. Si una forma di free jazz fortemente alternativa a quella \textit{mainstream} di quegli anni e anche per questo non salutata da un particolare successo commerciale, tanto che il gruppo si sciolse nel 1963 dopo una serata il cui magro incasso ammontò a trentacinque centesimi a testa\footcite{hamilton}.\par
 In seguito a una proposta di Herbie Hancock nel 1963 Bley fu ingaggiato da Sonny Rollins insieme a Henry Grimes (basso) e Roy McCurdy (batteria) per una serie di concerti, un tour in Giappone e Stati Uniti e un disco per la RCA con Coleman Hawkins, \textit{\textbf{Sonny meets Hawk!}} [RCA Victor 1963]. A differenza delle esperienze precedenti, il repertorio di Rollins era costituito principalmente da \textit{standard} seppur suonati con grande libertà armonica e strutturale. Questa occasione diede a Bley l'opportunità di misurarsi con un ulteriore approccio al linguaggio \textit{free}: il legame tra gli \textit{standard} e il pianista sarebbe continuato anche in seguito, fino alla fine della sua carriera.
 \section{La maturità artistica: il trio, l'incontro con l'elettronica e il solo}
 Nel 1964 Bley fu assoldato dal bassista Gary Peacock per una doppia serata: il primo concerto insieme a John Gilmore (sax tenore) e a Paul Motian (batteria) e il secondo con Albert Ayler (sax tenore) e Sunny Murray (batteria)\footcite[89]{stopping}. L'esperienza con Murray, primo batterista \textit{free} con cui Bley avesse mai avuto a che fare, fu allo stesso tempo rivelatrice e traumatica, tanto che Bley dovette chiedere a Carla di riscrivere i propri brani affinché si adattassero meglio allo stile del batterista. Non a caso, Bley avrebbe poi nella propria carriera prediletto lo stile più controllato di Motian. Gli sforzi di questa fase della carriera di Bley sono documentati nei dischi \textit{\textbf{Turning point}} [Improvising Artists 1975] con il primo quartetto e \textit{\textbf{Barrage}} [ESP-disk 1964] con Marshall Allen (sax contralto), Dewey Johnson (tromba), Eddie Gomez (basso) e Milford Graves (batteria).\par
@@ -68,7 +68,7 @@ Nel 1993 Bley ritorna eccezionalmente al sintetizzatore (questa volta, però, di
 . Il risultato è \textit{\textbf{Synth-Thesis}} [Postcard Records 1993]. Nello stesso anno, nonostante le proprie reticenze verso l'insegnamento, accetta una sporadica cattedra al Conservatorio del New England a Boston (lo stesso dove Giuffre aveva insegnato per anni). Tra i suoi allievi più illustri figurano la pianista giapponese Satoko Fujii e il compositore israeliano Yitzhak Yedid.\par
 Paul Bley morì il 3 gennaio 2016 nella sua casa a Stuart, in Florida, di cause naturali.
 \chapter{L'estetica pianistica e improvvisativa}
-\section{Sulle orme di Ornette}
+\section{Farfugliando con Ornette}
 \begin{fquote}
 	Non sono mai stato un amante degli accordi. Ho sempre pensato che un accordo fosse una melodia verticale suonata simultaneamente: se un accordo non poteva essere dissezionato in maniera tale che ogni nota si allineasse a formare una melodia di senso compiuto, non era un buon accordo.\footcite[71]{stopping}
 \end{fquote}
@@ -93,7 +93,8 @@ In particolare, vale la pena di approfondire l'evidente ascendente che la musica
 \begin{fquote}
 	Ornette ha risolto, con una singola mossa, un problema che era in fase di accumulazione da dieci anni. Ciò consisteva nel capire cosa fare per rendere l'improvvisazione jazz più interessante. Bird era un virtuoso sui cambi armonici e dopo di lui ne sono arrivati a dozzine. Non c'era niente di rimasto da suonare: ciò che avevi era una forma canzone di trentadue battute, una più una meno, che era ormai consunta come base su cui suonare. Quindi, ciò che Ornette fece fu dire che dopo la melodia tu dovevi suonare su solo uno dei centri tonali della melodia. Scriveva i temi deliberatamente in modo tale che non ci fossero trentadue battute di cambi armonici equamente distribuiti. Suonavano come se fossero tonali, ma a un esame più approfondito della composizione le battute erano irregolari e cose così.\footcite[12]{downbeat74}
 \end{fquote}
-Anche per Coleman, così come per Bley, si può notare il suo vocabolario musicale sia in fin dei conti direttamente mutuato da quello swing, bebop e rhythm \& blues e che l'operazione effettivamente innovativa consista nel nuovo significato dato dalla combinazione di questi motivi tradizionali in nuovi pattern metrici e melodici: l'innovazione non sta quindi nella creazione di un nuovo vocabolario ma bensì nella ridefinizione della sintassi e della grammatica musicale\footcite[109]{cogswell}. Senza alcun dubbio questa tendenza era compatibile con la determinazione di Bley di rimanere, in ogni caso, nell'ambito di un campo comunicativo jazzistico. La già citata continuità nelle frasi di Bley costituisce un altro punto in comune con l'estetica di Coleman, in cui emerge una volontà quasi metodica di mettere in relazione ogni motivo con quello precedente e quello successivo\footcite[115]{cogswell}. In questo senso la continuità melodica di Bley in tutte le fasi della carriera lo ha sempre contraddistinto se messo a confronto con pianisti quali Cecil Taylor, per cui invece vi è il tentativo di scardinare la coerenza non solo del linguaggio pianistico, ma anche della tecnica. In questo senso lo stile solistico di Bley è fortemente melodico non tanto rispetto all'armonia intesa in senso boppistico (che Bley, molto spesso, sceglie di non seguire) quanto più in relazione alla continuità interna del fraseggio. In Bley vi è spesso un fluire ininterrotto di idee melodiche che vengono concatenate, elise e combinate\footcite[20]{meehan}. Armonicamente, le continue escursioni di tonalità di Bley, che però non si incanala mai in una vera e propria bitonalità o politonalità, potrebbero rientrare nel concetto di \textit{pantonalità}\footcite[73]{reti} che in contrasto con l'atonalità propriamente definita, in cui il concetto stesso di tensione e rilascio armonico è effettivamente reso nullo, mostra una continua produzione e rilascio di dissonanze senza una reale soluzione di continuità.\par
+Anche per Coleman, così come per Bley, si può notare il suo vocabolario musicale sia in fin dei conti direttamente mutuato da quello swing, bebop e rhythm \& blues e che l'operazione effettivamente innovativa consista nel nuovo significato dato dalla combinazione di questi motivi tradizionali in nuovi pattern metrici e melodici: l'innovazione non sta quindi nella creazione di un nuovo vocabolario ma bensì nella ridefinizione della sintassi e della grammatica musicale\footcite[109]{cogswell}. Senza alcun dubbio questa tendenza era compatibile con la determinazione di Bley di rimanere, in ogni caso, nell'ambito di un campo comunicativo jazzistico. La già citata continuità nelle frasi di Bley costituisce un altro punto in comune con l'estetica di Coleman, in cui emerge una volontà quasi metodica di mettere in relazione ogni motivo con quello precedente e quello successivo\footcite[115]{cogswell}.\par
+In questo senso la continuità melodica di Bley in tutte le fasi della carriera lo ha sempre contraddistinto se messo a confronto con pianisti quali Cecil Taylor, per cui invece vi è il tentativo di scardinare la coerenza non solo del linguaggio pianistico, ma anche della tecnica. In questo senso lo stile solistico di Bley è fortemente melodico non tanto rispetto all'armonia intesa in senso boppistico (che Bley, molto spesso, sceglie di non seguire) quanto più in relazione alla continuità interna del fraseggio. In Bley vi è spesso un fluire ininterrotto di idee melodiche che vengono concatenate, elise e combinate\footcite[20]{meehan}. Armonicamente, le continue escursioni di tonalità di Bley, che però non si incanala mai in una vera e propria bitonalità o politonalità, potrebbero rientrare nel concetto di \textit{pantonalità}\footcite[73]{reti} che in contrasto con l'atonalità propriamente definita, in cui il concetto stesso di tensione e rilascio armonico è effettivamente reso nullo, mostra una continua produzione e rilascio di dissonanze senza una reale soluzione di continuità.\par
 Un altro concetto Colemaniano che ha probabilmente esercitato una forte influenza sul pianista è quello di \textit{erasure phrases}, che Bley spiega come ``frasi che erano tonali e ben temperate [alternate a] frasi che invece non lo erano deliberatamente\footcite[67]{stopping}'' con lo scopo di ``cancellare dalla tua memoria ciò che hai appena ascoltato.[...] Non sono lì per dirti qualcosa ma per farti dimenticare. Sono lì per farti sciacquare la bocca\footcite[32]{meehan}''. Ovviamente, per il pianoforte, strumento temperato per eccellenza, era impossibile riprodurre le variazioni microtonali di intonazione che caratterizzavano lo stile di Coleman; a tal proposito Bley sviluppa una metodologia personale per dare l'effetto di \textit{erasure phrase} in diversi punti dei propri soli. Come si può notare nelle trascrizioni dei soli di \textit{Ramblin'} (fig. \ref{fig:ramblin}) e \textit{All The Things You Are}, Bley spesso si trova a suonare passaggi che sono composti da frammenti di materiale tonale ad alta densità di note che, di conseguenza, eludono un centro tonale esatto e offuscano il senso armonico imitando la sensazione di disorientamento data dalle frasi non temperate suonate da Coleman. L'ambiguità riguarda anche l'aspetto ritmico: queste frasi sono spesso costituite da una scarica fitta di note senza una scansione ritmica regolare, con frequenti micro-interruzioni, inciampi, accelerazioni e ritenuti. Sono definibili come \textit{gesti}, piuttosto che vere e proprie melodie con coerenza interna, posti tra due idee melodiche dotate invece di autosufficienza e rilevanza.\par 
 A tal proposito appare inevitabile, per Bley, la riflessione sui limiti intrinseci allo strumento del pianoforte quando messo a confronto con la libertà timbrica e di intonazione del sassofono.
 \begin{fquote}
@@ -114,13 +115,25 @@ In particolare, questo sincretismo tra tradizione, innovazione, linguaggio blues
 \end{figure}
 Il blues è uno dei capisaldi dell'estetica di Coleman, per il quale costituiva sia un punto di partenza personale (come ex sassofonista di Rhythm \& Blues) sia culturale, nell'ambito di una musica che guarda a un ritorno alle radici dell'espressione afroamericana\footcite[38]{Cogswell1989}. Non stupisce quindi che anche Bley (seppur chiaramente per motivi diversi) torni così spesso e con tale limpidità al linguaggio blues. Dopotutto lui stesso riflette, a fronte della domanda di Arrigo Cappelletti sul suo rapporto con la tradizione blues:
 \begin{fquote}
-	Beh, il blues è un ottimo punto di partenza per poter suonare tutte le forme di jazz. Quindi quando suoni frasi orientate al blues sei abbastanza certo che finirai sul tracciato del jazz.\footcite[135]{cappelletti}
+	Il blues è un ottimo punto di partenza per poter suonare tutte le forme di jazz. Quindi quando suoni frasi orientate al blues sei abbastanza certo che finirai sul tracciato del jazz.\footcite[135]{cappelletti}
 \end{fquote}
 \section{In silenzio con Jimmy}
 Oltre a Coleman, l'altra figura che Bley piazza nel suo pantheon di ispirazioni è Jimmy Giuffre\footcite{hamilton}. Il fatto che il pianista ponga queste due figure, ambedue pionieri e artefici di lavori all'apparenza così radicalmente diversi, è significativo dei punti in comune tra i due artisti.\par
-L'interesse di Giuffre per la musica da camera\footcite[389]{johnston} lo 
+Forse ancora più di Coleman, che in quegli anni si muoveva ancora stabilmente all'interno di orizzonti ritmici e armonici estesi seppur molto legati alle forme originarie del linguaggio jazz, il trio di Giuffre con Bley e Steve Swallow si prepone come la naturale evoluzione alla proposta di improvvisazione libera che Lennie Tristano, già nel 1949, aveva avanzato. Prendendo spunto dall'interesse del clarinettista per la musica cameristica, Bley ricorda come nel trio di Giuffre vigesse l'approccio che gli strumenti nel trio fossero voci eguali, dove ognuno aveva esattamente un terzo della responsabilità anzichè essere relegati ai ruoli convenzionali dell'accompagnamento jazz\footcite[389]{johnston}. Nelle note di copertina di \textit{Free Fall} Steve Swallow ricorda:
+\begin{fquote}
+	Passavamo tanto tempo parlando quanto suonando durante le nostre prove, ponendoci domande come: come possiamo suonare a una velocità data ma senza un tempo fisso? Quanto a lungo è possibile improvvisare senza far riferimento a una funzione tonica? Qual è la melodia più lunga che possiamo suonare senza interruzione?
+\end{fquote}
+Giuffre non era nuovo alle formazioni senza batteria (spesso note discograficamente come Jimmy Giuffre 3), come quella con il chitarrista Jim Hall alla cui dipartita si deve l'ingresso di Bley e Swallow nel trio.
+La musica del trio si configura come un importante collegamento tra le strutture più legate alla forma canzone e alla pulsazione jazzistica di Coleman e Ayler e agli improvvisatori di matrice europea, emersi più tardi verso la fine degli anni '60, quali Derek Bailey, Peter Brötzmann ed Evan Parker.\par
+ Il trio aveva sviluppato un approccio all'improvvisazione sorprendentemente sistematico e preciso\footcite[387]{johnston}. A tal proposito Bley descrive le tecniche di prova come basate su ``premesse per l'improvvisazione'' nel senso di trattare aspetti e gesti musicali, interazioni e forme come materiali da manipolare anzichè come confini, come le forme compositive o il sistema temperato occidentale, entro cui limitare la propria tavolozza di suoni e decisioni\footcite[389]{johnston}. Giuffre aveva esplicitamente istruito Swallow a forzarsi non cadere all'interno di cadenze e risoluzioni classiche (come quella dal quinto grado alla tonica), consentendo quindi al basso di assumere una maggiore interattività melodica all'interno della formazione\footcite[390]{johnston}. Chiaramente, tali indicazioni riguardavano anche Bley, che senza alcun dubbio trasse da questa esperienza un grande influsso per quanto concerne la sua visione degli accordi come melodie verticali: ``[...] potevo suonare meno accordi e trattare il piano più come un fiato\footcite[390]{johnston}''. Un simile approccio era riservato al trattamento del tempo musicale, con Giuffre impegnato a condurre una decostruzione della pulsazione regolare che caratterizza la maggior parte del jazz senza però rigettarla: la sfida stava nel sviluppare la capacità di passare da uno scenario guidato da una pulsazione a uno più libero e ``avere la flessibilità di fare ciò che si voleva quando si voleva\footcite[390]{johnston}''. Swallow a tal proposito ricorda come il trio si interrogasse sulle diverse gradazioni nell'interpretazione del tempo o se fosse possibile che ognuno suonasse al proprio tempo indipendentemente da quello degli altri\footcite[390]{johnston}. A differenza dell'approccio più classico al free jazz, inoltre, Giuffre si prepose di porre una particolare attenzione alla tessitura timbrica dei tre strumenti e alle loro interazioni: ad esempio, Swallow ricorda un esercizio in cui il trio doveva suonare per dieci o quindici minuti attorno al do centrale, sovrapponendosi sullo stesso registro, per poi virare sull'orizzonte opposto in modo tale che il piano suonasse quanto più alto possibile rispetto al clarinetto e il basso raggiungesse invece il registro più grave in assoluto. In seguito, i musicisti avrebbero dovuto tratte le proprie conclusioni riguardo i territori timbrici e contrappuntistici in cui le diverse tecniche li avrebbero portati\footcite[391]{johnston}. \par
+ Nonostante questo approccio molto orientato alla ricerca, anche intellettuale, e allo sviluppo di un vocabolario sonico da cui estrarre materiale a seconda delle esigenze, è bene notare come il linguaggio in realtà non si estranei mai in maniera radicale dalla tradizione jazz, costituendone un'estensione più che un rifiuto. Dopotutto, Swallow ricorda che ``non abbiamo mai inteso mancare di approvazione a \textit{Sonny Rollins at the Village Vanguard}; al contrario, avevamo reverenza per quelle cose\footcite[388]{johnston}''. Questo pone il progetto di Giuffre in contrapposizione con altri improvvisatori europei come Eddie Prevost e il già citato Bailey, che invece avevano deliberatamente deciso di prendere le distanze dal jazz. Per portare un esempio concreto, il brano \textit{Me Too} del disco \textit{Thesis} propone quello che di fatto è un blues la cui caratterizzazione viene solo accennata, rimanendo implicita (a differenza del ``country blues'' di \textit{Ramblin'} di Coleman). \par
+ A tal proposito, è sempre interessante notare come nei primi due dischi (in particolare il primo, \textit{Fusion}) del trio di Giuffre vi sia la presenza di composizioni firmate da Carla Bley oltre la maggioranza di quelle composte da Giuffre: esse, da \textit{Jesus Maria} a \textit{Ictus} sono un sunto della visione compositiva di Carla Bley basata su temi modesti, trasparenti e armonicamente ambigui\footcite[25]{carla} che permettevano un'agevole esplorazione dei concetti di libertà armonica e ritmica.
 
+\appendix
 \addcontentsline{toc}{chapter}{Appendice: materiale trascritto}
 \addcontentsline{toc}{section}{All the things you are}
-\appendix
 \includepdf[pages=-,pagecommand={},scale=0.9]{things_vanilla}
+\addcontentsline{toc}{section}{Jesus Maria}
+\includepdf[pages=-,pagecommand={},scale=0.9]{jesus solo}
+\addcontentsline{toc}{section}{Ramblin'}
+\includepdf[pages=-,pagecommand={},scale=0.9]{ramblin solo vanilla}
