--- a/Tesi pf/references.bib
+++ b/Tesi pf/references.bib
@@ -97,6 +97,13 @@
 	journaltitle = {International Journal of Music education},
 	date = {2013}
 }
+@book{carla,
+	author = {Amy C. Beal},
+	title = {Carla Bley},
+	date = {2011},
+	publisher = {The board of Trustees of University of Illinois}
+}
+
 
 
 
