txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -64,7 +64,7 @@
 \pgfplotsset{compat=1.16}
 \usepgfplotslibrary{fillbetween}
 
-\renewcommand{\CancelColor}{\color{red}}
+\renewcommand{\CancelColor}{\color{green}}
 
 \newcounter{dummy}
 
@@ -559,7 +559,7 @@
 		\newcommand{\ift}{\text{if }}
 		\newcommand{\unmezz}{\frac{1}{2}}
 		\newcommand{\sa}{$\sigma$-algebra}	\newcommand{\rv}{random variable}
-		\titleformat{\section}{\color{SkyBlue4}}{\color{red}\thesection}{1em}{}
+		\titleformat{\section}{\color{Green3}}{\color{red}\thesection}{1em}{}
 		\subsectionfont{\color{SkyBlue4!90!black}\bfseries}
 									\pretitle{\begin{center}\LARGE\color{SkyBlue2}}
 		\sectionfont{\color{Cyan2!50!black}\bfseries}
