txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -189,6 +189,7 @@ Let's have a fucking party!
 		\end{equation*}
 	\end{remark}
 \end{enumerate}
+\section{Definition of Brownian motion}
 \clearpage
 \listoffigures  
 \end{document} 
