txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -562,7 +562,7 @@
 		\titleformat{\section}{\color{Green3}}{\color{red}\thesection}{1em}{}
 		\subsectionfont{\color{SkyBlue4!90!black}\bfseries}
 									\pretitle{\begin{center}\LARGE\color{SkyBlue2}}
-		\sectionfont{\color{Cyan2!50!black}\bfseries}
+		\sectionfont{\color{Green4}\bfseries}
 										\pretitle{\begin{center}\LARGE\color{SkyBlue2}}
 											\newcommand{\prefacename}{Preface}
 	\newcommand{\cinlar}{Çinlar }
