txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -64,7 +64,7 @@
 \pgfplotsset{compat=1.16}
 \usepgfplotslibrary{fillbetween}
 
-\renewcommand{\CancelColor}{\color{green}}
+\renewcommand{\CancelColor}{\color{Green4}}
 
 \newcounter{dummy}
 
