txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -190,6 +190,7 @@ Let's have a fucking party!
 	\end{remark}
 \end{enumerate}
 \section{Definition of Brownian motion}
+Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-23}$ (the Avogadro number) molecules with a diameter of $10^{-10}$ m of diameter.
 \clearpage
 \listoffigures  
 \end{document} 
