--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -191,6 +191,13 @@ Let's have a fucking party!
 \end{enumerate}
 \section{Definition of Brownian motion}
 Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-23}$ (the Avogadro number) molecules with a diameter of $10^{-10}$ m of diameter.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/screenshot006}
+	\caption{My balls.}
+	\label{fig:screenshot006}
+\end{figure}
+
 \clearpage
 \listoffigures  
 \end{document} 
