--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -193,11 +193,18 @@ Let's have a fucking party!
 Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-23}$ (the Avogadro number) molecules with a diameter of $10^{-10}$ m of diameter.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.2\linewidth]{img/screenshot006}
+	\begin{tikzpicture}
+		\shade[ball color = gray!40, opacity = 0.4] (0,0) circle (2cm);
+		\draw (0,0) circle (2cm);
+		\draw (-2,0) arc (180:360:2 and 0.6);
+		\draw[dashed] (2,0) arc (0:180:2 and 0.6);
+		\fill[fill=black] (0,0) circle (1pt);
+		\draw[dashed] (0,0 ) -- node[above]{$r$} (2,0);
+	\end{tikzpicture}
 	\caption{My balls.}
 	\label{fig:screenshot006}
 \end{figure}
-
+How can we model the behaviour
 \clearpage
 \listoffigures  
 \end{document} 
