txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -199,7 +199,7 @@ Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-
 		\draw (-1.2,0) arc (180:360:1.2 and 0.6);
 		\draw[dashed] (1.2,0) arc (0:180:1.2 and 0.6);
 		\fill[fill=black] (0,0) circle (1pt);
-		\draw[dashed] (0,0 ) -- node[above]{$10^{-6}\;m$} (1.2,0);
+		\draw[dashed] (0,0 ) -- node[above]{\tiny$10^{-6}\;m$} (1.2,0);
 	\end{tikzpicture}
 	\caption{My balls.}
 	\label{fig:screenshot006}
