--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -200,6 +200,9 @@ Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-
 		\draw[dashed] (1.2,0) arc (0:180:1.2 and 0.6);
 		\fill[fill=black] (0,0) circle (1pt);
 		\draw[dashed] (0,0 ) -- node[above]{\tiny$10^{-6}\;m$} (1.2,0);
+		\foreach \a in {1,2,...,17}{
+			\draw (\a*360/17: 4cm) node{angle \a};
+		}
 	\end{tikzpicture}
 	\caption{My balls.}
 	\label{fig:screenshot006}
