--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -202,6 +202,7 @@ Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-
 		\draw[dashed] (0,0 ) -- node[above]{\tiny$10^{-6}\;m$} (1.2,0);
 		\foreach \a in {1,2,...,17}{
 			\draw (\a*360/17: 2cm) circle (0.2cm);
+			\shade[ball color=Green3,opacity=0.6] (\a*360/17: 2cm) circle (0.2cm);
 		}
 	\end{tikzpicture}
 	\caption{My balls.}
