--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -208,7 +208,7 @@ Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-
 	\caption{My balls.}
 	\label{fig:screenshot006}
 \end{figure}
-How can we model the behaviour
+How can we model the behavior of this ball in a mathematical way\footnote{At this point of the lesson Prof. Sacerdote started ranting about Machine Learning (seriously?) being a black box for like 10 minutes.}?
 \clearpage
 \listoffigures  
 \end{document} 
