txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -208,7 +208,17 @@ Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-
 	\caption{My balls.}
 	\label{fig:screenshot006}
 \end{figure}
-How can we model the behavior of this ball in a mathematical way\footnote{At this point of the lesson Prof. Sacerdote started ranting about Machine Learning (seriously?) being a black box for like 10 minutes.}?
+How can we model the behavior of this ball in a mathematical way\footnote{At this point of the lesson Prof. Sacerdote started ranting about Machine Learning (seriously?) being a black box for like 10 minutes.}?\\
+In 1828 Robert Brown observed the chaotic movement of pollen in the water through a microscope and noted:
+\begin{itemize}
+	\item the motion was composed by translations and rotations;
+	\item particles seemed to move independently one from the other;
+	\item smallest particles moved more actively;
+	\item less viscous fluids determined more activity movement;
+	\item the motion never ceaser;
+	\item the motion was not determined by liquid flows or evaporations;
+	\item particles were not animated.
+\end{itemize}
 \clearpage
 \listoffigures  
 \end{document} 
