txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -215,10 +215,12 @@ In 1828 Robert Brown observed the chaotic movement of pollen in the water throug
 	\item particles seemed to move independently one from the other;
 	\item smallest particles moved more actively;
 	\item less viscous fluids determined more activity movement;
-	\item the motion never ceaser;
-	\item the motion was not determined by liquid flows or evaporations;
+	\item the motion never ceased;
+	\item the motion was not determined by liquid flows or evaporation;
 	\item particles were not animated.
 \end{itemize}
+In 1905 Einstein gave the correct explanation formulating a model that also proved valid for forecasting: the idea was that the atoms surrounding the particles (the atoms of the fluid) performed a temperature-dependent movement that collided with the particles, changing their direction.\\
+Unrelated, but in 1909 Jean Perrin determined the size of atoms.
 \clearpage
 \listoffigures  
 \end{document} 
