txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -220,6 +220,13 @@ In 1828 Robert Brown observed the chaotic movement of pollen in the water throug
 	\item particles were not animated.
 \end{itemize}
 In 1905 Einstein gave the correct explanation formulating a model that also proved valid for forecasting: the idea was that the atoms surrounding the particles (the atoms of the fluid) performed a temperature-dependent movement that collided with the particles, changing their direction.\\
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/screenshot006}
+	\caption{Autechre are a IDM duo from Rochdale, England.}
+	\label{fig:screenshot006}
+\end{figure}
+
 Unrelated, but in 1909 Jean Perrin determined the size of atoms.
 \clearpage
 \listoffigures  
