txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -226,7 +226,7 @@ In 1905 Einstein gave the correct explanation formulating a model that also prov
 	\caption{Autechre are a IDM duo from Rochdale, England, composed by Robert Brown and Sean Booth.}
 	\label{fig:screenshot006}
 \end{figure}
-Unrelated, but in 1909 Jean Perrin determined the size of atoms.
+In 1906 the Polish mathematician Smoluchowski independently obtained results similar to Einstein's. Unrelated, but in 1909 Jean Perrin determined the size of atoms.
 \clearpage
 \listoffigures  
 \end{document} 
