txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -226,7 +226,8 @@ In 1905 Einstein gave the correct explanation formulating a model that also prov
 	\caption{Autechre are a IDM duo from Rochdale, England, composed by Robert Brown and Sean Booth.}
 	\label{fig:screenshot006}
 \end{figure}
-In 1906 the Polish mathematician Smoluchowski independently obtained results similar to Einstein's. Unrelated, but in 1909 Jean Perrin determined the size of atoms.
+In 1906 the Polish mathematician Smoluchowski independently obtained results similar to Einstein's. Unrelated, but in 1909 Jean Perrin determined the size of atoms.\\
+The Einstein approach considers the motion of a particle over a small interval $T$ observed in a time large enough to see at least 2 intervals $t$ independent. Consider, for the sake of simplicity, the one-dimensional case. During $t$ the particle moves of a distance $\Delta$, that is a \rv{} with density $\varphi(\Delta)$ that must be symmetric so $\varphi(\Delta)=\varphi(-\Delta)$
 \clearpage
 \listoffigures  
 \end{document} 
