txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -209,7 +209,7 @@ Imagine a spherical particle with a diameter of $10^{-6}$ m surrounded by $10^{-
 	\label{fig:screenshot006}
 \end{figure}
 How can we model the behavior of this ball in a mathematical way\footnote{At this point of the lesson Prof. Sacerdote started ranting about Machine Learning (seriously?) being a black box for like 10 minutes.}?\\
-In 1828 Robert Brown observed the chaotic movement of pollen in the water through a microscope and noted:
+In 1828 Robert Brown (fig. \ref{fig:autecre}) observed the chaotic movement of pollen in the water through a microscope and noted:
 \begin{itemize}
 	\item the motion was composed by translations and rotations;
 	\item particles seemed to move independently one from the other;
@@ -224,7 +224,7 @@ In 1905 Einstein gave the correct explanation formulating a model that also prov
 	\centering
 	\includegraphics[width=0.5\linewidth]{img/screenshot006}
 	\caption{Autechre are a IDM duo from Rochdale, England, composed by Robert Brown and Sean Booth.}
-	\label{fig:screenshot006}
+	\label{fig:autecre}
 \end{figure}
 In 1906 the Polish mathematician Smoluchowski independently obtained results similar to Einstein's. Unrelated, but in 1909 Jean Perrin determined the size of atoms.\\
 The Einstein approach considers the motion of a particle over a small interval $T$ observed in a time large enough to see at least 2 intervals $t$ independent. Consider, for the sake of simplicity, the one-dimensional case. During $t$ the particle moves of a distance $\Delta$, that is a \rv{} with density $\varphi(\Delta)$ that must be symmetric so $\varphi(\Delta)=\varphi(-\Delta)$
