txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -231,6 +231,10 @@ The Einstein approach considers the motion of a particle over a small interval $
 \begin{equation*}
 	\gamma=f(x,t)\qquad\text{as the number of particles per unit of volume.}
 \end{equation*}
+Einstein proved that $f$ verifies
+\begin{equation*}
+	\frac{\partial f}{\partial t}=D\frac{\partial^{2}f}{\partial x^{2}}
+\end{equation*}
 \clearpage
 \listoffigures  
 \end{document} 
