txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -233,7 +233,11 @@ The Einstein approach considers the motion of a particle over a small interval $
 \end{equation*}
 Einstein proved that $f$ verifies
 \begin{equation*}
-	\frac{\partial f}{\partial t}=D\frac{\partial^{2}f}{\partial x^{2}}
+	\frac{\partial f}{\partial t}=D\frac{\partial^{2}f}{\partial x^{2}}.
+\end{equation*}
+This was the equation of heat diffusion that was already well known at the time. And so was its solution, which is
+\begin{equation*}
+	f(x,t)=\frac{1}{\sqrt{4\pi Dt}}e^{-\frac{x^{2}}{4Dt}}
 \end{equation*}
 \clearpage
 \listoffigures  
