--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc} % best for Western European languages
 
 \usepackage{amsmath,amsthm}% must be loaded before newtxmath
-\usepackage[cmintegrals,noXchvw]{newtxmath}
+\usepackage[cmintegrals]{newtxmath}
 %\usepackage{fontspec} %I want to be a XeLaTeX bitch but my heard is in pdftex...
 %\usepackage{lmodern}
 
