txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -237,8 +237,14 @@ Einstein proved that $f$ verifies
 \end{equation*}
 This was the equation of heat diffusion that was already well known at the time. And so was its solution, which is
 \begin{equation*}
-	f(x,t)=\frac{1}{\sqrt{4\pi Dt}}e^{-\frac{x^{2}}{4Dt}}
+	f(x,t)=\frac{1}{\sqrt{4\pi Dt}}e^{-\frac{x^{2}}{4Dt}}.
 \end{equation*}
+In this case $D$ had a physical meaning: Einstein proved
+\begin{minipage}{0.4\linewidth}
+	\begin{equation*}
+		D=\frac{1}{\sqrt{6\pi r\eta}}\frac{RT}{N}
+	\end{equation*}
+\end{minipage}
 \clearpage
 \listoffigures  
 \end{document} 
