--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -240,10 +240,13 @@ This was the equation of heat diffusion that was already well known at the time.
 	f(x,t)=\frac{1}{\sqrt{4\pi Dt}}e^{-\frac{x^{2}}{4Dt}}.
 \end{equation*}
 In this case $D$ had a physical meaning: Einstein proved\par
+\noindent
 \begin{minipage}{0.4\linewidth}
 	\begin{equation*}
 		D=\frac{1}{\sqrt{6\pi r\eta}}\frac{RT}{N}
 	\end{equation*}
+\end{minipage}\begin{minipage}{0.6}
+content...
 \end{minipage}
 \clearpage
 \listoffigures  
